--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,9 @@ repository: Git repository where your resume will be hosted, only required if yo
 # favicon: Directory of your favicon (eg. images/favicon.ico)(optional)
 
 # Personal info
-name: Your Name
+name: Andrés Quintela
 title: Your job title
-email: Your email (optional)
-phone: Your phone number (optional)
-website: Your website (eg. https://google.com)(optional)
+email: andres.quintelaquintanilla@gmail.com
 
 # Social links
 twitter_username: jekyllrb
