update linked in

--- a/_config.yml
+++ b/_config.yml
@@ -4,21 +4,12 @@ repository: Git repository where your resume will be hosted, only required if yo
 
 # Personal info
 name: Andrés Quintela
-title: Your job title
 email: andres.quintelaquintanilla@gmail.com
 
 # Social links
-twitter_username: jekyllrb
-github_username:  jekyll
-dribbble_username: jekyll
-facebook_username: jekyll
-flickr_username: jekyll
-instagram_username: jekyll
-linkedin_username: jekyll
-xing_username: jekyll
-pinterest_username: jekyll
-youtube_username: jekyll
-googleplus_username: +jekyll
+github_username:  andres-quintela
+linkedin_username: andres quintela
+
 
 # About Section
 # about_title: About Me (Use this to override about section title)
