--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ email: andres.quintelaquintanilla@gmail.com
 
 # Social links
 github_username:  andres-quintela
-linkedin_username: andres quintela
+linkedin_username: andres-quintela
 
 
 # About Section
