--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,10 @@ linkedin_username: andres.quintelaquintanilla@gmail.com
 # about_title: About Me (Use this to override about section title)
 about_profile_image: me.jpg
 about_content: | # this will include new lines to allow paragraphs
- Welcome to my page!
+ ## Welcome to my page!
+ I'm currently a third-year aeronautical engineering student and I have a great passion for computer and data science-related projects. 
+ In this page you will be able to look at my CV in a friendlier way as well as exploring some of the projects I have developed during the previous years.
+
 
 # Projects Section
 # projects_title: Projects #(Use this to override about projects section title)
